added toolbar and implemented mainpage

--- a/tutorials_web_ui/src/app/components/main-page/main-page.component.html
+++ b/tutorials_web_ui/src/app/components/main-page/main-page.component.html
@@ -1,1 +1,10 @@
-<p>main-page works!</p>
+<p>
+    <mat-toolbar color="primary" >
+      <img src="assets/tutorials logo.jpg" class="height">
+      <span class="example-spacer"></span>
+      <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon" (click)="toggleMenu()">
+        <mat-icon>menu</mat-icon>
+      </button>
+    </mat-toolbar>
+  </p>
+  
